2014-10-04  Glenn Morris  <rgm@gnu.org>

	* apropos.el (apropos-symbols-internal):
	Avoid error with non-symbol properties.  (Bug#18337#16)

	* startup.el (command-line):
	Handle altered user-emacs-directory in load-path warning.  (Bug#18512)

2014-10-04  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-full-height-p): Make it behave correctly for
	minibuffer window.
	(window-current-scroll-bars): Fix code.
	(fit-frame-to-buffer): Use window-scroll-bar-height instead of
	window-scroll-bars.
	* frame.el (frame-current-scroll-bars): Fix doc-string.
	* scroll-bar.el (toggle-horizontal-scroll-bar): New command.

2014-10-04  Mark Oteiza  <mvoteiza@udel.edu>  (tiny change)

	* files.el (auto-mode-alist): Use sh-mode for .zsh files.  (Bug#18488)

2014-10-04  Glenn Morris  <rgm@gnu.org>

	* frame.el (frame-monitor-attributes)
	(display-monitor-attributes-list): Doc fixes.

2014-10-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	Merge trivially safe differences from standalone CC-mode.
	* progmodes/cc-mode.el (c-initialize-cc-mode): Don't quote a symbol
	just to then pass it to `symbol-value'.
	(prog-mode): Provide fallback definition, if needed.
	* progmodes/cc-langs.el: Always load `cl'.  Don't load `cl-lib'.
	Remove "cl-" prefix accordingly.
	* progmodes/cc-fonts.el (c-font-lock-invalid-string): Use integerp or
	characterp depending on the type of characters.
	(c-font-lock-enum-tail): Remove unused var `start'.
	* progmodes/cc-engine.el: Load CL at compile-time.
	(c-declare-lang-variables): Use mapcan.
	(c-append-to-state-cache): Remove unused var `ce+1'.
	(c-parse-state-state): Make buffer-local.
	(c-ssb-lit-begin): Remove unused var `pps-end-pos'.
	(c-just-after-func-arglist-p): Remove unused var `end'.
	* progmodes/cc-defs.el: Load cc-fix if delete-dups is undefined.
	(c-<-as-paren-syntax, c->-as-paren-syntax): Move definition earlier.
	(c-make-keywords-re): Use delete-dups.
	(c-get-current-file): Avoid file-name-base.